--- a/src/components/color-picker/styles/dropdown/hsva.css
+++ b/src/components/color-picker/styles/dropdown/hsva.css
@@ -24,11 +24,7 @@
 
 .nova-color-picker-value {
   position: absolute;
-  background-image: linear-gradient(
-    180deg,
-    hsla(0, 0%, 0%, 0),
-    hsla(0, 0%, 0%, 1)
-  );
+  background-image: linear-gradient(180deg, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 1));
   width: 200px;
   height: 200px;
   top: 0;
