--- a/src/styles/themes/vars.css
+++ b/src/styles/themes/vars.css
@@ -18,20 +18,17 @@
 
   /* region transition */
   --nova-transition-component:
-    border var(--nova-duration-short) linear,
-    box-shadow var(--nova-duration-short) linear;
+    border var(--nova-duration-short) linear, box-shadow var(--nova-duration-short) linear;
   --nova-transition-border: border var(--nova-duration-short) linear;
   --nova-transition-bg: background var(--nova-duration-short) linear;
   /* endregion */
 
   /* region Font */
   --nova-font-sans-serif:
-    'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', Helvetica, Arial,
-    source-han-sans-simplified-c, 'Apple Color Emoji', 'Segoe UI Emoji',
-    sans-serif;
+    'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', Helvetica, Arial, source-han-sans-simplified-c,
+    'Apple Color Emoji', 'Segoe UI Emoji', sans-serif;
   --nova-font-monospace:
-    'Sarasa Mono SC', Iosevka, 'Fira Code', source-code-pro, Monaco, Consolas,
-    monospace;
+    'Sarasa Mono SC', Iosevka, 'Fira Code', source-code-pro, Monaco, Consolas, monospace;
   --nova-font-size: 14px;
   --nova-line-height: 20px;
   /* endregion */
@@ -40,8 +37,7 @@
   --nova-shadow-primary: 0 0 0 2px var(--nova-color-primary-shadow);
   --nova-shadow-dropdown: 0px 10px 20px hsla(0, 0%, 0%, 0.25);
   --nova-shadow-cursor:
-    0 0 0 1px var(--nova-color-black-shadow),
-    inset 0 0 0 1px var(--nova-color-black-shadow);
+    0 0 0 1px var(--nova-color-black-shadow), inset 0 0 0 1px var(--nova-color-black-shadow);
   /* endregion */
 
   /* region Border */
